Adicionando as tags aria-label e role para os gráficos

--- a/BlockTechMVC/BlockTechMVC/Views/MeusInvestimentos/BitcoinCash.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/MeusInvestimentos/BitcoinCash.cshtml
@@ -100,11 +100,11 @@
     <br />
 
     <div id="graficoSemana">
-        <canvas id="graficoBitcoinCash" width="400" height="150">
+        <canvas id="graficoBitcoinCash" width="400" height="150" aria-label="Gráfico com os valores do investimento no Bitcoin Cah nos últimos 7 dias" role="img">
         </canvas>
     </div>
     <div id="graficoMes">
-        <canvas id="graficoBitcoinCash30" width="400" height="150">
+        <canvas id="graficoBitcoinCash30" width="400" height="150" aria-label="Gráfico com os valores do investimento no Bitcoin Cash nos últimos 7 dias" role="img">
         </canvas>
     </div>
 
@@ -216,11 +216,11 @@ else
     <br />
 
     <div id="graficoSemana">
-        <canvas id="graficoBitcoinCash" width="400" height="150">
+        <canvas id="graficoBitcoinCash" width="400" height="150" aria-label="Gráfico com os valores do investimento no Bitcoin Cash nos últimos 7 dias" role="img">
         </canvas>
     </div>
     <div id="graficoMes">
-        <canvas id="graficoBitcoinCash30" width="400" height="150">
+        <canvas id="graficoBitcoinCash30" width="400" height="150" aria-label="Gráfico com os valores do investimento no Bitcoin Cash nos últimos 7 dias" role="img">
         </canvas>
     </div>
     <br />
