--- a/BlockTechMVC/BlockTechMVC/Views/MeusInvestimentos/Ethereum.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/MeusInvestimentos/Ethereum.cshtml
@@ -98,11 +98,11 @@
     <br />
 
     <div id="graficoSemana">
-        <canvas id="graficoEthereum" width="400" height="150">
+        <canvas id="graficoEthereum" width="400" height="150" aria-label="Gráfico com os valores do investimento no Ethereum nos últimos 7 dias" role="img">
         </canvas>
     </div>
     <div id="graficoMes">
-        <canvas id="graficoEthereum30" width="400" height="150">
+        <canvas id="graficoEthereum30" width="400" height="150" aria-label="Gráfico com os valores do investimento no Ethereum nos últimos 7 dias" role="img">
         </canvas>
     </div>
 
@@ -215,11 +215,11 @@ else
     <br />
 
     <div id="graficoSemana">
-        <canvas id="graficoEhtereum" width="400" height="150">
+        <canvas id="graficoEhtereum" width="400" height="150" aria-label="Gráfico com os valores do investimento no Ethereum nos últimos 7 dias" role="img">
         </canvas>
     </div>
     <div id="graficoMes">
-        <canvas id="graficoEhtereum30" width="400" height="150">
+        <canvas id="graficoEhtereum30" width="400" height="150" aria-label="Gráfico com os valores do investimento no Ethereum nos últimos 7 dias" role="img">
         </canvas>
     </div>
     <br />
