--- a/BlockTechMVC/BlockTechMVC/Views/MeusInvestimentos/Litecoin.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/MeusInvestimentos/Litecoin.cshtml
@@ -99,11 +99,11 @@
     <br />
 
     <div id="graficoSemana">
-        <canvas id="graficoLitecoin" width="400" height="150">
+        <canvas id="graficoLitecoin" width="400" height="150" aria-label="Gráfico com os valores do investimento no Litecoin nos últimos 7 dias" role="img">
         </canvas>
     </div>
     <div id="graficoMes">
-        <canvas id="graficoLitecoin30" width="400" height="150">
+        <canvas id="graficoLitecoin30" width="400" height="150" aria-label="Gráfico com os valores do investimento no Bitcoin nos últimos 7 dias" role="img">
         </canvas>
     </div>
 
@@ -216,11 +216,11 @@ else
     <br />
 
     <div id="graficoSemana">
-        <canvas id="graficoLitecoin" width="400" height="150">
+        <canvas id="graficoLitecoin" width="400" height="150" aria-label="Gráfico com os valores do investimento no Litecoin nos últimos 7 dias" role="img">
         </canvas>
     </div>
     <div id="graficoMes">
-        <canvas id="graficoLitecoin30" width="400" height="150">
+        <canvas id="graficoLitecoin30" width="400" height="150" aria-label="Gráfico com os valores do investimento no Litecoin nos últimos 7 dias" role="img">
         </canvas>
     </div>
 
