--- a/BlockTechMVC/BlockTechMVC/Views/Relatorios/Index.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/Relatorios/Index.cshtml
@@ -22,7 +22,7 @@
 <h4 class="text-center">Valor Por Criptomoeda @ViewData["Data"]</h4>
 <br />
 
-<canvas id="graficoCriptomoedas" width="400" height="150"></canvas>
+<canvas id="graficoCriptomoedas" width="400" height="150"  aria-label="Gráfico com os valores de todas criptomoedas hoje" role="img"></canvas>
 
 @section Scripts {
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
