--- a/BlockTechMVC/BlockTechMVC/Views/Relatorios/Litecoin.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/Relatorios/Litecoin.cshtml
@@ -26,7 +26,7 @@
 <h1>@ViewData["Title"]</h1>
 <br />
 <h4 class="text-center">Últimos 7 Dias</h4>
-<canvas id="graficoBitcoin" width="400" height="150">
+<canvas id="graficoBitcoin" width="400" height="150" aria-label="Gráfico com os valores do Litecoin nos últimos 7 dias" role="img">
 </canvas>
 
 @section Scripts {
