--- a/BlockTechMVC/BlockTechMVC/Views/Relatorios/PaxGold30.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/Relatorios/PaxGold30.cshtml
@@ -26,7 +26,7 @@
 <h1>@ViewData["Title"]</h1>
 <br />
 <h4 class="text-center">Últimos 30 Dias</h4>
-<canvas id="graficoBPaxGold" width="400" height="150">
+<canvas id="graficoBPaxGold" width="400" height="150"  aria-label="Gráfico com os valores do PAX Gold nos últimos 30 dias" role="img">
 </canvas>
 
 @section Scripts {
