--- a/BlockTechMVC/BlockTechMVC/Views/MeusInvestimentos/Bitcoin.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/MeusInvestimentos/Bitcoin.cshtml
@@ -99,11 +99,11 @@
     <br />
 
     <div id="graficoSemana">
-        <canvas id="graficoBitcoin" width="400" height="150">
+        <canvas id="graficoBitcoin" width="400" height="150" aria-label="Gráfico com os valores do investimento no Bitcoin nos últimos 7 dias" role="img">
         </canvas>
     </div>
     <div id="graficoMes">
-        <canvas id="graficoBitcoin30" width="400" height="150">
+        <canvas id="graficoBitcoin30" width="400" height="150" aria-label="Gráfico com os valores do investimento no Bitcoin nos últimos 7 dias" role="img">
         </canvas>
     </div>
 
@@ -215,11 +215,11 @@ else
     <br />
 
     <div id="graficoSemana">
-        <canvas id="graficoBitcoin" width="400" height="150">
+        <canvas id="graficoBitcoin" width="400" height="150" aria-label="Gráfico com os valores do investimento no Bitcoin nos últimos 7 dias" role="img">
         </canvas>
     </div>
     <div id="graficoMes">
-        <canvas id="graficoBitcoin30" width="400" height="150">
+        <canvas id="graficoBitcoin30" width="400" height="150" aria-label="Gráfico com os valores do investimento no Bitcoin nos últimos 7 dias" role="img">
         </canvas>
     </div>
 
