--- a/BlockTechMVC/BlockTechMVC/Views/MeusInvestimentos/Xrp.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/MeusInvestimentos/Xrp.cshtml
@@ -100,11 +100,11 @@
     <br />
 
     <div id="graficoSemana">
-        <canvas id="graficoXrp" width="400" height="150">
+        <canvas id="graficoXrp" width="400" height="150" aria-label="Gráfico com os valores do investimento no XRP nos últimos 7 dias" role="img">
         </canvas>
     </div>
     <div id="graficoMes">
-        <canvas id="graficoXrp30" width="400" height="150">
+        <canvas id="graficoXrp30" width="400" height="150" aria-label="Gráfico com os valores do investimento no XRP nos últimos 7 dias" role="img">
         </canvas>
     </div>
 
@@ -217,11 +217,11 @@ else
     <br />
 
     <div id="graficoSemana">
-        <canvas id="graficoXrp" width="400" height="150">
+        <canvas id="graficoXrp" width="400" height="150" aria-label="Gráfico com os valores do investimento no XRP nos últimos 7 dias" role="img">
         </canvas>
     </div>
     <div id="graficoMes">
-        <canvas id="graficoXrp30" width="400" height="150">
+        <canvas id="graficoXrp30" width="400" height="150" aria-label="Gráfico com os valores do investimento no XRP nos últimos 7 dias" role="img">
         </canvas>
     </div>
 
