--- a/BlockTechMVC/BlockTechMVC/Views/Relatorios/Ethereum30.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/Relatorios/Ethereum30.cshtml
@@ -24,7 +24,7 @@
 <h1>@ViewData["Title"]</h1>
 <br />
 <h4 class="text-center">Últimos 30 Dias</h4>
-<canvas id="graficoEthereum" width="400" height="150">
+<canvas id="graficoEthereum" width="400" height="150" aria-label="Gráfico com os valores do Ethereum nos últimos 30 dias" role="img">
 </canvas>
 
 @section Scripts {
