--- a/BlockTechMVC/BlockTechMVC/Views/Relatorios/Mensal.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/Relatorios/Mensal.cshtml
@@ -77,7 +77,7 @@
     </div>
     <br />
 </div>
-<canvas id="graficoCriptomoedas" width="400" height="150" style="min-height: 30vh;"></canvas>
+<canvas id="graficoCriptomoedas" width="400" height="150" style="min-height: 30vh;"  aria-label="Gráfico com os valores de todas criptomoedas nos últimos 30 dias" role="img"></canvas>
 
 
 @section Scripts {
@@ -152,7 +152,3 @@
     </script>
 
 }
-
-
-
-
