--- a/BlockTechMVC/BlockTechMVC/Views/Relatorios/Semanal.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/Relatorios/Semanal.cshtml
@@ -77,7 +77,7 @@
     </div>
     <br />
 </div>
-<canvas id="graficoCriptomoedas" width="400" height="150" style="min-height: 30vh;"></canvas>
+<canvas id="graficoCriptomoedas" width="400" height="150" style="min-height: 30vh;"  aria-label="Gráfico com os valores de todas as criptomoedas nos últimos 7 dias" role="img"></canvas>
 
 
 @section Scripts {
