--- a/BlockTechMVC/BlockTechMVC/Views/ContasClientes/Details.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/ContasClientes/Details.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "Detalhes";
+    ViewData["ContaVinculada"] = "Conta Vinculada";
     var total = ViewBag.Total;
     var totalAdm = ViewBag.TotalAdm;
 }
