--- a/BlockTechMVC/BlockTechMVC/Views/ContasClientes/Index.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/ContasClientes/Index.cshtml
@@ -9,7 +9,7 @@
     double[] totalGeral = new double[20];
 
     if (User.IsInRole("Admin")) {
-        foreach (var item in ViewBag.TotalAdm)
+        foreach (var item in ViewBag.TotalAdmin)
         {
             totalGeral[i] = item;
             i++;
