--- a/BlockTechMVC/BlockTechMVC/Views/Shared/_Layout.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/Shared/_Layout.cshtml
@@ -50,10 +50,10 @@
                             <a class="nav-link text-white" asp-area="" asp-controller="Transacoes" asp-action="Index">Transações</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-controller="ContasClientes" asp-action="Index">Conta</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Conta" asp-action="Index">Conta</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-controller="ContasClientes" asp-action="Aplicacoes">Aplicações</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Aplicacoes" asp-action="Index">Aplicações</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-white" asp-area="" asp-controller="Relatorios" asp-action="Index">Relatórios</a>
